# landprice_prediction

./: .gitignore  AGENTS.md  CLAUDE.md  mise.toml
docs/: data-structure.md  project-structure.md
docs/issue/: template.md
docs/plan/: implementation-plan.md  template.md
docs/plan/test/: inference-api.feature  preprocessing.feature
docs/review/: 20260710-codex-review.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/lib/: formatters.test.ts  formatters.ts  mapStyle.test.ts  mapStyle.ts
pipeline/: README.md  pyproject.toml
pipeline/src/landprice/: __init__.py  columns.py  config.py  schema.py
pipeline/src/landprice/preprocess/: __init__.py  features.py  l01.py  nearest.py  run.py  s12.py  stations.py  validation.py
pipeline/src/landprice/train/: __init__.py  geojson.py  model.py  run.py  target.py
pipeline/tests/: __init__.py  conftest.py  helpers.py  test_features.py  test_l01.py  test_nearest.py  test_s12.py  test_s12_integration.py  test_stations.py  test_train_geojson.py  test_train_model.py  test_train_run.py  test_train_target.py  test_validation.py
