[project]
name = "landprice-pipeline"
version = "0.1.0"
description = "地価×駅距離×乗降客数の前処理・学習パイプライン"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0",
    "pandas>=2.2",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pyarrow>=17",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/landprice"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "RUF"]
# 日本語コメントを方針とするため、全角文字のあいまい文字検出は無効化する
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
# pandas-stubs経由のAny戻り値が多くノイズになるため無効化する
warn_return_any = false
mypy_path = "src"

[[tool.mypy.overrides]]
# 型スタブ未提供のライブラリ
module = ["geopandas.*", "shapely.*", "pyproj.*", "sklearn.*", "lightgbm.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
